--- a/package.json
+++ b/package.json
@@ -16,13 +16,11 @@
     "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongodb": "^6.0.0",
     "mongoose": "^7.5.1"
   },
   "devDependencies": {
     "jest": "^29.7.0",
     "nodemon": "^3.0.1",
-    "supertest": "^6.3.3",
-    "test": "^3.3.0"
+    "supertest": "^6.3.3"
   }
 }
